Make this version available while I work on next.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ services:
   web:
     restart: always
     build: .
-    image: pbevin/wordfun
+    image: pbevin/wordfun:old
     ports:
       - "5199:80"
